Fix up scrollbars

--- a/src/css/options/body.css
+++ b/src/css/options/body.css
@@ -57,8 +57,7 @@
   /*margin-top: 11px;*/
   /*margin-bottom: 10px;*/
   padding: 10px 3px;
-  overflow: scroll;
-  overflow-x: hidden;
+  overflow: hidden;
 
   box-sizing: border-box;
   user-select: none;
@@ -75,7 +74,7 @@
   border-radius: 3px;
   box-sizing: border-box;
 
-  /*font-size: 16px;*/
+  font-size: 16px;
   /*font-weight: bold;*/
 }
 #sidebar .sidebar_section:hover {
